apps/web/src/components/ProductCard/product-card.module.scss
@import '_globals.scss';
.container {
    position: relative;
    flex: 1 auto;
    overflow: hidden;
    display: grid;
    grid-template-rows: auto 1fr auto;
    grid-template-areas: 'product-image' 'product-details' 'product-actions';
    gap: calc(var(--block-spacer-small) / 2);
    height: 100%;
    min-height: 36rem;
    width: 100%;
    min-width: var(--component-product-card-width);
    padding: calc(var(--block-padding) - var(--block-border-width));
    scroll-snap-align: center;
    background-color: var(--product-card-color-background);
    border-radius: var(--block-border-radius);
    box-shadow: 0 0 1rem -0.5rem var(--color-block-shadow);

    .button {
        height: 100%;
        box-shadow: none;
    }

    .image {
        grid-area: product-image;
        overflow: hidden;
        position: relative;
        height: auto;
        width: 100%;
        padding: var(--block-padding-small);
        border-radius: var(--block-border-radius-small);
        transition: 150ms ease-in-out;
        user-select: none;
        background-color: var(--product-card-color-image-background, var(--color-bright));
        //box-shadow: 0 0 1rem -0.5rem var(--color-block-shadow);
        aspect-ratio: 1.25 / 1;

        @media (min-width: 950px) {
            padding: var(--block-padding-large);
            aspect-ratio: 1.35 / 1;
        }

        &:is(:hover, :active, :focus) {
            padding: calc(var(--block-padding-small) / 2);
        }
    }

    .details {
        grid-area: product-details;
        display: grid;
        grid-template-rows: auto 1fr;
        gap: var(--block-padding-large);
        width: 100%;
        margin-top: var(--block-spacer);
    }

    .header {
        display: flex;
        flex-direction: column;
        gap: 0.15rem;
        width: 100%;
        height: 100%;
        font-size: 2rem;
        line-height: 1.05;
        hyphens: auto;

        @media (min-width: $breakpoint-mobile) {
            font-size: 2.15rem;
        }

        & > a {
            display: contents;
        }

        &:is(:hover, :active, :focus) {
            text-decoration: underline dotted 0.2rem var(--accent-primary);
            text-underline-offset: var(--block-border-width);
            text-underline-position: auto;
        }

        .title {
            font-weight: 700;
        }

        .brand {
            font-weight: 500;
            font-size: 0.75em;
            line-height: 1;
        }
    }

    .pricing {
        display: flex;
        flex-direction: column-reverse;
        justify-content: flex-start;
        align-items: flex-start;
        gap: 0;
        height: 100%;
        font-size: 0.75rem;

        & > div {
            display: contents;
        }
    }

    .quantity-action {
        display: grid;
        grid-template-columns: auto 1fr;
        justify-content: space-between;
        align-items: end;
        height: 100%;
    }

    &.skeleton {
        box-shadow: none;

        .image {
            box-shadow: none;
        }
    }
}

